--- a/site/assets/css/flexi_containers.css
+++ b/site/assets/css/flexi_containers.css
@@ -26,7 +26,7 @@ body .fc-mssg,
 body .fc-mssg-inline {
 	border: 1px solid;
 	display: block;
-	margin: 0 0 5px 0;
+	margin: 1px 0 5px 0;
 	padding: 8px 10px 12px 36px;
 	border-radius: 6px;
 	font-size:12px;
@@ -35,7 +35,7 @@ body .fc-mssg-inline {
 }
 body .fc-mssg-inline {
 	display: inline-block;
-	margin: 0 0 0 12px;
+	margin: 1px 0 2px 12px;
 	max-width: 62%;
 }
 
