--- a/site/assets/css/fcvote.css
+++ b/site/assets/css/fcvote.css
@@ -189,20 +189,20 @@ div.fcvote .ajax-loader {
 /*****************************************/
 
 div.fcvote > ul.fcvote_list {
-	height: 25px !important;
-	width: 125px !important; /* overridable number of stars */
+	height: 24px !important;
+	width: 120px !important; /* overridable number of stars */
 }
 
 div.fcvote > ul.fcvote_list > li.voting-links a, 
 div.fcvote > ul.fcvote_list > li.current-rating {
-	height: 25px !important;
-	line-height: 25px !important;
+	height: 24px !important;
+	line-height: 24px !important;
 }
 
 div.fcvote > ul.fcvote_list, 
 div.fcvote > ul.fcvote_list > li.voting-links a:hover, 
 div.fcvote > ul.fcvote_list > li.current-rating {
-	background-image: url(../images/star.gif) !important;
+	background-image: url(../images/star-medium.png) !important;
 }
 
 
