# Fixed empty content type FILTER in layout editor, converted field type FILTER to be group field for easier selection, removed test message in flexisystem plugin appearing in Joomla article view, removed meaningless sorting of tags column in items manager causing SQL error, some minor CSS changes

--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -236,7 +236,7 @@ span.editlinktip.hasTip.tags img {
 	margin: 0;
 	width: 100%;
 }
-.positions_readonly, .positions {
+.positions {
 	list-style: none;
 	padding: 5px 0px 0px 0px;
 	margin: 0;
@@ -246,11 +246,6 @@ span.editlinktip.hasTip.tags img {
 	border: 0px dashed silver;
 	overflow: visible;  /* hidden, CAUSES annoying jumps with jQuery sortable */
 	width: 100%;
-}
-div .positions_readonly {
-	padding: 2px 1%;
-	width: 98%;
-	display: inline;
 }
 
 .fields {
