# Fixed javascript prompt for deletion not escaped in some backend views, converted language strings for favourites to use Joomla way of adding language strings to JS scripts

--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -2,6 +2,14 @@
 /**
  * Upload Widget CSS
  */
+.fc-sys-upload-limit-box img,
+.fc-php-upload-limit-box img {
+	vertical-align: top;
+	float: none;
+	border: none;
+	margin: 0;
+}
+
 .upload-queue {
 	list-style: none;
 }
