^ Converted FLEXIcontent translations groups to Joomla language associations. Also now untranslatable fields will be editable inside an associated translation. TODO: in item form the association selectors are not filtering according to language, user needs to set language filter manually. J2.5 support stopped, installation script will give out warning and fail

--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1286,3 +1286,18 @@ table.fc-form-tbl fieldset {
 	width: 0;
 	background-color: #0099ff;
 }
+
+
+/* J3 various */
+.control-label {
+	clear: left;
+	float: left;
+	min-width: 120px;
+	text-align:right;
+	padding: 4px 16px 4px 2px;
+}
+
+.control-label .label {
+	width: auto;
+	display:inline-block;
+}
