--- a/admin/models/forms/item.xml
+++ b/admin/models/forms/item.xml
@@ -46,7 +46,7 @@
 		<field name="access" type="accesslevel" label="JFIELD_ACCESS_LABEL" description="JFIELD_ACCESS_DESC" class="use_select2_lib" size="1" />
 		<field name="hits" type="hidden" label="JGLOBAL_HITS" description="COM_CONTENT_FIELD_HITS_DESC" class="readonly" size="6" readonly="true" filter="unset" />
 		<field name="score" type="hidden" label="FLEXI_SCORE" description="FLEXI_SCORE_DESC" class="readonly" size="6" readonly="true" filter="unset" />
-		<field name="lang_parent_id" type="item" label="FLEXI_ORIGINAL_CONTENT_ITEM" description="FLEXI_ORIGINAL_CONTENT_ITEM_DESC" langparent_item="1" class="inputbox" size="6"/>
+		<field name="lang_parent_id" type="item" label="FLEXI_ORIGINAL_CONTENT_ITEM" description="FLEXI_ORIGINAL_CONTENT_ITEM_DESC" class="inputbox" size="6"/>
 		<field name="language" type="contentlanguage" label="JFIELD_LANGUAGE_LABEL" description="COM_CONTENT_FIELD_LANGUAGE_DESC" class="inputbox">
 			<option value="*">JALL</option>
 		</field>
