--- a/modules/mod_flexiadvsearch/tmpl_common/module.css
+++ b/modules/mod_flexiadvsearch/tmpl_common/module.css
@@ -4,7 +4,7 @@
 }
 
 .mod_flexiadvsearch_wrapper .flexiadvsearchlink {
-	margin-left: 8px !important;
+	margin-left: 8px;
 }
 
 .mod_flexiadvsearch_wrapper .fc_filter.fc_text_search {
@@ -12,7 +12,7 @@
 	margin:0px;
 	border:0px solid;
 }
-#search_searchword {
-  margin-left: 0 !important;
-  min-width: 150px !important;
+.mod_flexiadvsearch_wrapper #search_searchword {
+  margin-left: 0;
+  min-width: 150px;
 }
