--- a/site/librairies/select2/select2.css
+++ b/site/librairies/select2/select2.css
@@ -710,9 +710,9 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
 
 /* main top-level container */
 .use_select2_lib {
-	width: auto!important;
-	margin-top: 0px!important;
-	margin-bottom: 2px!important;
+	width: auto !important;
+	margin-top: 0px;
+	margin-bottom: 2px;
 }
 /* main top-level container - multi-select */
 .use_select2_lib.select2-container-multi {
